# plaid-rs

./: Cargo.toml  LICENSE  README.md  index.html  search-index.js
.github/workflows/: rust.yml  rustdoc.yml
main/: crates.js  search-index.js  settings.html  source-files.js
main/plaid/: all.html  index.html
plaid/: all.html  index.html  sidebar-items.js
plaid/accounts/: struct.AccountBalances.html  struct.GetAccountsResponse.html  struct.GetBalancesOptions.html  struct.GetBalancesResponse.html
plaid/auth/: struct.ACHNumber.html  struct.AccountNumberCollection.html  struct.GetAuthOptions.html
plaid/categories/: sidebar-items.js  struct.Category.html  struct.GetCategoriesResponse.html
plaid/client/: enum.Environment.html
plaid/deposit_switch/: index.html  sidebar-items.js  struct.GetDepositSwitchResponse.html
plaid/errors/: sidebar-items.js  struct.Error.html  type.Result.html
plaid/holdings/: sidebar-items.js  struct.GetHoldingsResponse.html  struct.Holding.html  struct.Security.html
plaid/identity/: sidebar-items.js  struct.AddressData.html  struct.GetIdentityOptions.html  struct.PhoneNumber.html
plaid/institutions/: sidebar-items.js  struct.GetInstitutionsOptions.html  struct.Institution.html  struct.SearchInstitutionsResponse.html
plaid/investment_transactions/: sidebar-items.js  (+2 more)
src/: accounts.rs  auth.rs  categories.rs  client.rs  deposit_switch.rs  errors.rs  holdings.rs  identity.rs  institutions.rs  investment_transactions.rs  item.rs  liabilities.rs  lib.rs  link_token.rs  processor.rs  sandbox.rs  transactions.rs  webhooks.rs
(+195 files in other folders)
