[package]
name = "plaid"
version = "0.3.0"
authors = ["Amol Bhave <amol@amolbhave.com>"]
edition = "2018"
description = "Plaid Client for Rust"
readme = "README.md"
repository = "https://github.com/ammubhave/plaid-rs"
license = "MIT"
keywords = ["plaid", "api"]
documentation = "https://ammubhave.github.io/plaid-rs/plaid/"

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
tokio = {version = "1.3.0", features = ["macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }