[package]
name = "plaid"
version = "1.0.3"
authors = ["Thomas Moore <thomas@bend.green>", "Amol Bhave <amol@amolbhave.com>"]
edition = "2018"
description = "Plaid Client for Rust"
readme = "README.md"
repository = "https://github.com/ammubhave/plaid-rs"
license = "MIT"
keywords = ["plaid", "api"]
documentation = "https://ammubhave.github.io/plaid-rs/"
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio = {version = "1.6.1", features = ["macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }
